# ultimate-image-gen-mcp

./: .env.example  .gitignore  CLAUDE.md  FIX_VERIFICATION_TEST_PLAN.md  README.md  TEST_RESULTS.md  app.py  pyproject.toml  raw_response.json  request.json  request_exact.json  response_exact.json
.github/workflows/: publish.yml
src/: __init__.py  server.py
src/config/: __init__.py  constants.py  settings.py
src/core/: __init__.py  exceptions.py  validation.py
src/prompts/: __init__.py
src/resources/: __init__.py
src/services/: __init__.py  gemini_client.py  image_service.py  imagen_client.py  prompt_enhancer.py
src/tools/: __init__.py  batch_generate.py  generate_image.py
src/utils/: __init__.py
